# elfyzer

./: .gitattributes  .gitignore  README.md  pyproject.toml
src/elfyzer/: __init__.py  __main__.py  analysis.py  cli.py  diff_engine.py  extractor.py  models.py  server.py  utils.py
src/elfyzer/static/: fonts.css  styles.css
src/elfyzer/static/fonts/: LICENSE-OFL.txt
src/elfyzer/static/js/: chart.js  diff.js  helpers.js  main.js  report.js  state.js  views.js
src/elfyzer/templates/: index.html
