[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elfyzer"
version = "0.3.1"
description = "Firmware Memory Analysis Platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "elfyzer contributors"},
]
keywords = ["elf", "firmware", "memory", "analysis", "embedded", "linker", "pyelftools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Operating System",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20",
    "pyelftools>=0.29",
    "python-multipart",
    "pycxxfilt",
]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/dhanush777x/elfyzer.git"
Repository = "https://github.com/dhanush777x/elfyzer.git"

[project.scripts]
elfyzer = "elfyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
elfyzer = ["templates/*.html", "static/**/*"]
